2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-attributes.h:
	Add NAUTILUS_FILE_ATTRIBUTE_THUMBNAIL attribute
	
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
	Load thumbnails asynchronosuly.
	
        * libnautilus-private/nautilus-file.c:
	Initial code to use the asynchronoulsy loaded thumbnail
	
        * libnautilus-private/nautilus-icon-factory.c:
	Add NAUTILUS_FILE_ATTRIBUTE_THUMBNAIL as a required attribute for
	icons

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Read thumbnail info from gio

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c (nautilus_file_get_gicon):
	Handle accept, visited and embedding text state and
	rewrite the icon as needed.
	
        * libnautilus-private/nautilus-icon-info.c:
        (nautilus_icon_info_finalize):
	Fix crash if pixbuf is NULL

2007-10-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-icon-info.[ch]:
	Added NautilusInfoInfo, including caches and GIcon => pixbuf lookup
	
        * libnautilus-private/nautilus-file.[ch]:
	Make nautilus_file_get_icon return a NautilusFileInfo
	
        * libnautilus-private/nautilus-icon-canvas-item.[ch]:
	Split out attach points instead of using NautilusAttachPoints
	
        * libnautilus-private/nautilus-icon-container.[ch]:
        * src/file-manager/fm-icon-container.c:
	Use the new nautilus_file_get_icon and nautilus_file_info_* stuff

        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-program-choosing.c:
        * libnautilus-private/nautilus-mime-application-chooser.c:
        * libnautilus-private/nautilus-open-with-dialog.c: